--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy": "ng build -prod -sm -ec -bh /calendar/ && gh-pages -d dist"
   },
   "private": true,
   "dependencies": {
@@ -20,7 +21,9 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular-cli-github-pages": "^0.2.0",
     "core-js": "^2.4.1",
+    "gh-pages": "^0.12.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
