--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@ngui/tooltip": "^0.5.1",
     "angular-cli-github-pages": "^0.2.0",
+    "angular2-modal": "^2.0.3",
     "core-js": "^2.4.1",
     "gh-pages": "^0.12.0",
+    "ngx-tooltip": "0.0.9",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
