added angularfire and firebase

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@ngui/tooltip": "^0.5.1",
     "angular-cli-github-pages": "^0.2.0",
     "angular2-modal": "^2.0.3",
+    "angularfire2": "^2.0.0-beta.8",
     "core-js": "^2.4.1",
+    "firebase": "^3.7.5",
     "gh-pages": "^0.12.0",
     "ngx-tooltip": "0.0.9",
     "rxjs": "^5.1.0",
